# v-c-agentd

./: .gitignore  config.h.in  meson.build  meson_options.txt
include/agentd/: attestationservice.h  bootstrap_config.h  canonizationservice.h  command.h  config.h  control.h  fds.h  inet.h  ipc.h  notificationservice.h  process.h  protocolservice.h  psock.h  randomservice.h  services.h  signalthread.h  status_codes.h
scripts/: package.sh
src/attestationservice/: attestationservice_artifact_record_value_create.c  attestationservice_artifact_record_value_create_from_artifact.c  attestationservice_artifact_record_value_resource_release.c  attestationservice_create_instance.c  attestationservice_create_reaper_fiber.c  attestationservice_create_signal_thread.c  attestationservice_create_sleep_thread.c  attestationservice_dataservice_child_context_create.c  attestationservice_dataservice_query_pending_transaction.c  attestationservice_dataservice_transaction_promote.c  attestationservice_dataservice_transaction_tree_insert.c  attestationservice_entry_point.c  attestationservice_event_loop.c  attestationservice_get_or_query_artifact.c  attestationservice_internal.h  attestationservice_sleep.c  attestationservice_transaction_record_value_create.c  attestationservice_update_or_insert_artifact.c  attestationservice_verify_txn_has_valid_fields.c  attestationservice_verify_txn_is_in_correct_sequence.c  attestationservice_verify_txn_is_unique.c  start_attestationservice_proc.c
src/bootstrap_config/: bootstrap_config_set_version_request.c
src/canonization/: canonization_api_recvresp_private_key_set.c  canonization_api_sendreq_private_key_set.c  canonizationservice_block_make.c  canonizationservice_child_context_close.c  canonizationservice_complete_update.c  canonizationservice_dataservice_response_block_read.c  canonizationservice_dataservice_response_block_write.c  canonizationservice_dataservice_response_transaction_first_read.c  canonizationservice_dataservice_response_transaction_read.c  canonizationservice_dataservice_sendreq_block_get.c  canonizationservice_dataservice_sendreq_block_id_latest_get.c  canonizationservice_dataservice_sendreq_child_context_create.c  canonizationservice_dataservice_sendreq_transaction_get_first.c  canonizationservice_decode_and_dispatch_control_command.c  canonizationservice_decode_and_dispatch_control_command_configure.c  canonizationservice_decode_and_dispatch_control_command_private_key_set.c  canonizationservice_decode_and_dispatch_control_command_start.c  canonizationservice_event_loop.c  canonizationservice_instance_create.c  canonizationservice_internal.h  canonizationservice_notify_block_update.c  canonizationservice_notify_read.c  canonizationservice_notify_write.c  start_canonization_proc.c
src/command/: command_readconfig.c  command_version.c  private_command_attestationservice.c  private_command_canonizationservice.c  private_command_notificationservice.c  private_command_protocolservice.c  private_command_randomservice.c  private_command_read_private_key.c  private_command_read_public_entities.c  private_command_supervisor.c
src/commandline/: commandline_dispatch_private_command.c  parse_commandline_options.c
src/config/: agentd.l  agentd.y  config_read_block.c  config_set_defaults.c  config_write_block.c
src/dataservice/: dataservice_api_recvresp_artifact_get.c  dataservice_api_recvresp_artifact_get_old.c  dataservice_api_recvresp_block_get.c  dataservice_api_recvresp_block_get_old.c  dataservice_api_recvresp_block_id_by_height_get.c  dataservice_api_recvresp_block_id_by_height_get_old.c  dataservice_api_recvresp_block_make.c  dataservice_api_recvresp_block_make_old.c  dataservice_api_recvresp_canonized_transaction_get.c  dataservice_api_recvresp_canonized_transaction_get_old.c  dataservice_api_recvresp_child_context_close.c  dataservice_api_recvresp_child_context_close_old.c  dataservice_api_recvresp_child_context_create.c  dataservice_api_recvresp_child_context_create_old.c  dataservice_api_recvresp_global_settings_get.c  dataservice_api_recvresp_global_settings_get_old.c  dataservice_api_recvresp_global_settings_set.c  dataservice_api_recvresp_global_settings_set_old.c  dataservice_api_recvresp_latest_block_id_get.c  dataservice_api_recvresp_latest_block_id_get_old.c  dataservice_api_recvresp_root_context_init.c  dataservice_api_recvresp_root_context_init_old.c  (+80 more)
subprojects/: gtest.wrap  rcpr.wrap  vcblockchain.wrap  vccert.wrap  vccrypt.wrap
test/: directory_test_helper.cpp  directory_test_helper.h
(+436 files in other folders)
